github pages js link fix

--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-
-    The average is <span id="average_label"></span>
-    <script src="/script.js"></script>
-  
+The average is <span id="average_label"></span>
+<script src="script.js"></script>
