github pages js link fix

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 The average is <span id="average_label"></span>
-<script src="script.js"></script>
+<script src="https://nerdskullz.github.io/cubic-weight-calculator/script.js"></script>
