--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-The average is <span id="average_label"></span>
-<script src="https://nerdskullz.github.io/cubic-weight-calculator/script.js"></script>
+<html>
+  <body>
+    The average is <span id="average_label"></span>
+    <script src="/script.js"></script>
+  </body>
+</html>
