--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    The average is <span id="average_label"></span>
+    The average is <span id="average_label"></span> kg
     <script src="/script.js"></script>
   </body>
 </html>
